Add the html content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet">
 </head>
+
 <body>
+
+  <header>
+    <h1>Planets</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="#introduction">Introduction</a>
+        </li>
+        <li>
+          <a href="#terrestrialplanets">Terrestrial planets</a>
+        </li>
+        <li>
+          <a href="#mars">Mars</a>
+        </li>
+        <li>
+          <a href="#venus">Venus</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
 </body>
 </html>
