Fix spacing and add css

--- a/index.html
+++ b/index.html
@@ -14,18 +14,10 @@
     <h1>Planets</h1>
     <nav>
       <ul>
-        <li>
-          <a href="#introduction">Introduction</a>
-        </li>
-        <li>
-          <a href="#terrestrialplanets">Terrestrial planets</a>
-        </li>
-        <li>
-          <a href="#mars">Mars</a>
-        </li>
-        <li>
-          <a href="#venus">Venus</a>
-        </li>
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#terrestrialplanets">Terrestrial planets</a></li>
+        <li><a href="#mars">Mars</a></li>
+        <li><a href="#venus">Venus</a></li>
       </ul>
     </nav>
   </header>
